--- a/chase-models/memodemo2_permissive.xhtml
+++ b/chase-models/memodemo2_permissive.xhtml
@@ -287,7 +287,7 @@ m4_include(`memodemo2.gli&apos;)m4_dnl
 
 ms_evt(E) =&gt; E = e2 | E = e3 | E = e7 | E = e8 | E = e10.
 
-m4_include(`memodemo2_assumptions.gli&apos;)m4_dnl
+m4_include(`memodemo2_assumptions_permissive.gli&apos;)m4_dnl
 
 m4_include(`thy.gli&apos;)m4_dnl
     </pre>
